wk_taa_taaqa/src/objects/AccountScoring__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CustomerPoints__c</fullName>
        <label>CustomerPoints</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerSegmentation__c</fullName>
        <label>CustomerSegmentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerYears__c</fullName>
        <label>CustomerYears</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfReturns__c</fullName>
        <label>NumberOfReturns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProspectPoints__c</fullName>
        <label>ProspectPoints</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subsegment__c</fullName>
        <label>Subsegment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AccountScoring</label>
</CustomObject>